styles/style.css
nav {
  display: flex;
  justify-content: space-between;
  margin: 50px;
}
nav ul {
  list-style: none;
  align-items: center;
  display: flex;
}
nav ul li {
  padding-left: 20px;
}
.btn-primary {
  padding-top: 20px;
  height: 30px;
}

.nav-btn button {
  border-radius: 4px;
  background: rgba(70, 145, 101, 1);
  padding: 15px 18px;
  width: 150px;
  color: white;
  border: none;
}
.banner-container{
    background-image: url("../assets/hero-bg.png");
    height: 400px;
    width: 100%;
    padding-top: 80px;
    text-align: center;
}
.banner-btn{
    color: rgba(70, 145, 101, 1);
    font-size: 10px;
    font-family: Inter;
    font-weight: 400;
    font-style:normal;
    text-align: center;
    border-radius: 80px;
    padding: 8px 12px 8px 12px;
    border: none;
    
}
.banner-btn-two{
    background-color: rgba(70, 145, 101, 1);
    color: #fff;
    padding: 15px;
    margin: 20px;
    border-radius: 6px;
    border: none;
}
.banner-btn-three{
    padding: 15px;
    border-radius: 6px;
    border: none;
}
.text{
    /* color: rgba(255,255,255,1); */
    color: #fff;
}
.text-primary{
    color: rgba(70, 145, 101, 1);
}
.notes-container{
    text-align: center;
    border-radius: 8px;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
}
.notes-image{
    background: rgba(249, 85, 85, 1);
    border-radius: 100px;
    width: 60px;
    height: 50px; 
}
.notes-item-container{
    display: flex;
    gap: 15px;
    justify-content: center;
    align-items: center;
    padding: 25px;
}
.second-brain-container{
    display: flex;
    text-align:center;
    align-items: center;
    margin: auto;

}

.second-brain-content{
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: start;
  padding-left: 40px;
}
.second-brain-greetings{
     color: rgba(70,145,101,1);
     font-size: 15px;
     font-weight: 500;
     font-style: normal;
     line-height: 22px;
}

.second-brain-content li {
    list-style: none;
}

.second-brain-image img{
    height: 400px;
    width: 400px;
}


.second-brain-section{
    max-width: 80%;
    margin: auto;
}
.Early-Access-section{
    border-radius: 12px;
    background: rgba(247, 246, 242, 1);
    align-items: center;
    justify-content: flex-start;
    padding: 80px 40px 80px 40px;
    flex-direction: column;
    text-align: center;
    
    /* gap: 30; */
}

.Early-Access-btn{
    /* box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15); */
    background: rgba(70, 145, 101, 1);
    color: #fff;
    padding: 15px 20px 15px 20px;
    border: none;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
    height: 55px;
}
.Early-Access-description-two{
    font-size: 16px;
    font-weight: 500;
    font-family: Inter;
    font-style: normal;
    text-align: center;
    height: 20px;
}

